--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,8 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="form-group">
-    <%= f.text_field :username, placeholder: "Choose a username", class: "form-control" %>
+  <div class="field">
+    <%= f.text_field :username, placeholder: "Choose a username" %>
   </div>
 
   <div class="field">
