--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :date %>
-    <%= form.text_field :date %>
+    <%= form.select :model_year, (Time.zone.now.year - 100)..(Time.zone.now.year + 1) %><br>
   </div>
 
   <div class="field">
