--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,16 @@
           <ul class="nav navbar-nav navbar">
               <li><%= link_to 'Create New Post', new_post_path %></li>
           </ul>
+          <ul>
+          <%= form_tag(search_page_path, :method => "get",   class: 'navbar-form navbar-left') do %>  
+            <div class="input-group">  
+              <%= search_field_tag :search, params[:search], placeholder: "Search", class: "form-control" %>  
+              <div class="input-group-btn">  
+                <%= button_tag "", :class => 'btn btn-info glyphicon glyphicon-search',:name => nil%>  
+              </div>  
+            </div>  
+          <% end %>
+          </ul>
         <nav class="collapse navbar-collapse navbar-ex1-collapse">
           <% if user_signed_in? -%>
             <ul class="nav navbar-nav navbar-right">
