added links to posts

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -39,6 +39,12 @@
     <%= form.label :genre %>
     <%= form.text_field :genre %>
   </div>
+  
+  <div class="field">
+    <%= form.label :link%>
+    <%= form.text_field :link%>
+  </div>
+
 
   <div class="actions">
     <%= form.submit %>
