--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,6 +25,11 @@
   <%= @post.genre %>
 </p>
 
+<p>
+<strong>Link:</strong>
+<%= @post.link%>
+</p>
+
 
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
