--- a/app/views/feed/feed.html.erb
+++ b/app/views/feed/feed.html.erb
@@ -4,15 +4,16 @@
             <div class=" clearfix">
             <h2>
                 <%= link_to post.title, post %><br>
-                <small class="author">Submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.username unless post.user.blank? %></small>
+                <small class="author">Submitted <%= time_ago_in_words(post.created_at) %> ago</small>
             </h2>
             </div>
         <% end %>
+        <%= paginate @posts %>
     </div>
     <div class="col-md-6">
         <h1>Recently viewed:</h1>
     </div>
     <div>
-
+        <h1>Saved Posts:</h1>
     </div>
 </div>
